--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,13 @@
-absl-py==0.7.1
-astor==0.8.0
-bleach==1.5.0
-boto==2.49.0
-boto3==1.9.157
-botocore==1.12.157
-certifi==2019.3.9
-chardet==3.0.4
-cycler==0.10.0
 Cython==0.29.8
-docutils==0.14
-gast==0.2.2
 gensim==3.7.3
-grpcio==1.21.1
-h5py==2.9.0
-html5lib==0.9999999
-idna==2.8
-jmespath==0.9.4
 Keras==2.2.4
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
-kiwisolver==1.0.1
-Markdown==3.1.1
 matplotlib==3.0.3
-mock==3.0.5
 numpy==1.16.2
 pandas==0.24.2
-protobuf==3.8.0
-pyparsing==2.3.1
-python-dateutil==2.8.0
-pytz==2018.9
 PyYAML==5.1
-requests==2.22.0
-s3transfer==0.2.0
 scikit-learn==0.20.3
-scipy==1.2.1
-six==1.12.0
-smart-open==1.8.3
-tensorboard==1.13.1
-tensorflow==1.5.0
-tensorflow-estimator==1.13.0
-tensorflow-tensorboard==1.5.1
-termcolor==1.1.0
-urllib3==1.25.3
-Werkzeug==0.15.4
+tensorboard==1.12.2
+tensorflow==1.12.0
+progress==1.5
